# spin-py-uv-demo

./: .gitignore  README.md  pyproject.toml  spin.toml
