[project]
name = "spin-py-demo"
version = "0.1.0"
description = "a demo of a spin wasm app made with uv and python"
authors = [{ name = "Дамјан Георгиевски", email = "gdamjan@gmail.com" }]
readme = "README.md"
license-files = ["LICENSE"]
classifiers = ["Private :: Do Not Upload"]
requires-python = ">=3.13"
dependencies = [
    "componentize-py>=0.17.2",
    "spin-sdk>=3.3.1",
]

[build-system]
requires = ["uv_build>=0.8.3,<0.9.0"]
build-backend = "uv_build"
